--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,24 +1,33 @@
 ---
 type: page
-title: About
+title: USPEKHI
 date: 2021-03-19
 ---
+import Image from "next/image";
 
-# Helmar Bachle
-My name is Helmar
-As a Level 3 Support associate for Amazon, I excel at handling complex queries and escalated issues from our premium sellers. In my spare time, I am passionate about staying up-to-date on the latest technologies and enjoy building apps with Astro.js and Next.js. With a love for travel, I have visited 65 countries and bring a diverse perspective to my work. Whether at home or abroad, I am always seeking new challenges and opportunities to grow.
-This portfolio is built with **Next.js** and a library called [Nextra](https://nextra.vercel.app/). It allows you to write Markdown and focus on the _content_ of your portfolio.
+# Globaltraveller
 
+If you're a business owner in 2024 or just a blogger and you're not satisfied with your website's performance, 
+these articles might be for you. Maybe you've invested a lot of time and effort into creating a beautiful website 
+with a tool like Wordpress or Wix, but it's not generating the results you hoped for. 
+Even if you are getting some traction, there is always room for improvement. In this blog, 
+I'll explain why using a Framwork like Next.js, Ionic, Svelte or Astro is the best choice for building a strong web presence.
+As a backend you can either chose Google Cloud Services, Netlify, Vercel or AWS.
+<Image
+  src="/images/Uspekhi.png"
+  alt="Photo"
+  width={1125}
+  height={750}
+  priority
+  className="next-image"
+/>
 [**Check my **](https://helmarbachle.web.app/) website
+
+
 
 ---
 
-<div>
-  Facebook [@helmar.bachle](https://www.facebook.com/profile.php?id=100091438909081)
-  <br />
-  GitHub [helmar81](https://github.com/helmar81)
-  <br />
-  Instagram (https://instagram.com/yourname)
-  <br />
-  Email globaltraveller58@gmail.com
-</div>
+
+
+
+      
